code/outputs/logs/missing_quick_psofirst_20260218_233626.log
STAGE_START run_baseline config=configs/exp_missing_spot_no_oracle_quick.yaml
Baseline PV=2.0 MR=0.0: sr=1.00
Baseline PV=2.0 MR=0.1: sr=1.00
Baseline PV=2.0 MR=0.3: sr=1.00
Baseline PV=2.0 MR=0.5: sr=0.80
Baseline PV=5.0 MR=0.0: sr=0.00
Baseline PV=5.0 MR=0.1: sr=0.00
Baseline PV=5.0 MR=0.3: sr=0.00
Baseline PV=5.0 MR=0.5: sr=0.00
Baseline PV=8.0 MR=0.0: sr=0.00
Baseline PV=8.0 MR=0.1: sr=0.00
Baseline PV=8.0 MR=0.3: sr=0.00
Baseline PV=8.0 MR=0.5: sr=0.00
Baseline PV=10.0 MR=0.0: sr=0.00
Baseline PV=10.0 MR=0.1: sr=0.00
Baseline PV=10.0 MR=0.3: sr=0.00
Baseline PV=10.0 MR=0.5: sr=0.00
SOLVER=baseline rows=80 out=outputs/tables/missing_spot_no_oracle_quick_baseline_results.csv
STAGE_DONE run_baseline config=configs/exp_missing_spot_no_oracle_quick.yaml
STAGE_START run_asm config=configs/exp_missing_spot_no_oracle_quick.yaml
[1/80] PV=2.0 seed=20260210 OK rmse=0.0650 19.5s (ETA 25.7min)
[2/80] PV=2.0 seed=20260211 OK rmse=0.0845 10.2s (ETA 19.4min)
[3/80] PV=2.0 seed=20260212 OK rmse=0.0922 14.6s (ETA 19.0min)
[4/80] PV=2.0 seed=20260213 OK rmse=0.1154 14.2s (ETA 18.6min)
[5/80] PV=2.0 seed=20260214 OK rmse=0.0965 13.4s (ETA 18.0min)
[6/80] PV=2.0 seed=20260210 FAIL rmse=0.2162 15.7s (ETA 18.0min)
[7/80] PV=2.0 seed=20260211 OK rmse=0.0967 9.5s (ETA 16.9min)
[8/80] PV=2.0 seed=20260212 FAIL rmse=0.1836 13.1s (ETA 16.5min)
[9/80] PV=2.0 seed=20260213 OK rmse=0.0623 12.9s (ETA 16.2min)
[10/80] PV=2.0 seed=20260214 OK rmse=0.1198 12.8s (ETA 15.9min)
[11/80] PV=2.0 seed=20260210 OK rmse=0.0667 12.0s (ETA 15.5min)
[12/80] PV=2.0 seed=20260211 OK rmse=0.1179 5.6s (ETA 14.5min)
[13/80] PV=2.0 seed=20260212 OK rmse=0.1365 10.6s (ETA 14.1min)
[14/80] PV=2.0 seed=20260213 OK rmse=0.1081 9.9s (ETA 13.7min)
[15/80] PV=2.0 seed=20260214 OK rmse=0.1152 10.1s (ETA 13.3min)
[16/80] PV=2.0 seed=20260210 FAIL rmse=0.2142 7.9s (ETA 12.8min)
[17/80] PV=2.0 seed=20260211 OK rmse=0.1367 4.0s (ETA 12.1min)
[18/80] PV=2.0 seed=20260212 OK rmse=0.0995 8.0s (ETA 11.7min)
[19/80] PV=2.0 seed=20260213 OK rmse=0.0745 7.8s (ETA 11.3min)
[20/80] PV=2.0 seed=20260214 OK rmse=0.0860 7.6s (ETA 11.0min)
[21/80] PV=5.0 seed=20260210 FAIL rmse=0.2472 10.2s (ETA 10.8min)
[22/80] PV=5.0 seed=20260211 FAIL rmse=0.3026 2.5s (ETA 10.2min)
[23/80] PV=5.0 seed=20260212 FAIL rmse=0.2470 9.0s (ETA 10.0min)
[24/80] PV=5.0 seed=20260213 FAIL rmse=0.2814 9.0s (ETA 9.7min)
[25/80] PV=5.0 seed=20260214 FAIL rmse=0.2286 3.9s (ETA 9.3min)
[26/80] PV=5.0 seed=20260210 FAIL rmse=0.2464 7.0s (ETA 9.0min)
[27/80] PV=5.0 seed=20260211 FAIL rmse=0.3026 2.3s (ETA 8.6min)
[28/80] PV=5.0 seed=20260212 FAIL rmse=0.2686 8.1s (ETA 8.4min)
[29/80] PV=5.0 seed=20260213 FAIL rmse=0.2445 7.5s (ETA 8.2min)
[30/80] PV=5.0 seed=20260214 FAIL rmse=0.2308 3.6s (ETA 7.8min)
[31/80] PV=5.0 seed=20260210 FAIL rmse=0.3084 5.5s (ETA 7.6min)
[32/80] PV=5.0 seed=20260211 FAIL rmse=0.2987 1.9s (ETA 7.2min)
[33/80] PV=5.0 seed=20260212 FAIL rmse=0.2383 6.4s (ETA 7.0min)
[34/80] PV=5.0 seed=20260213 FAIL rmse=0.2533 5.8s (ETA 6.8min)
[35/80] PV=5.0 seed=20260214 FAIL rmse=0.2283 2.9s (ETA 6.5min)
[36/80] PV=5.0 seed=20260210 FAIL rmse=0.3206 4.1s (ETA 6.3min)
[37/80] PV=5.0 seed=20260211 FAIL rmse=0.2789 1.6s (ETA 6.0min)
[38/80] PV=5.0 seed=20260212 FAIL rmse=0.2416 5.0s (ETA 5.8min)
[39/80] PV=5.0 seed=20260213 FAIL rmse=0.2394 4.3s (ETA 5.6min)
[40/80] PV=5.0 seed=20260214 FAIL rmse=0.2376 2.3s (ETA 5.4min)
[41/80] PV=8.0 seed=20260210 FAIL rmse=0.4554 3.9s (ETA 5.2min)
[42/80] PV=8.0 seed=20260211 FAIL rmse=0.4902 1.3s (ETA 4.9min)
[43/80] PV=8.0 seed=20260212 FAIL rmse=0.4563 4.4s (ETA 4.8min)
[44/80] PV=8.0 seed=20260213 FAIL rmse=0.4548 3.6s (ETA 4.6min)
[45/80] PV=8.0 seed=20260214 FAIL rmse=0.4060 1.8s (ETA 4.4min)
[46/80] PV=8.0 seed=20260210 FAIL rmse=0.4554 3.6s (ETA 4.2min)
[47/80] PV=8.0 seed=20260211 FAIL rmse=0.4902 1.3s (ETA 4.0min)
[48/80] PV=8.0 seed=20260212 FAIL rmse=0.4622 4.0s (ETA 3.8min)
[49/80] PV=8.0 seed=20260213 FAIL rmse=0.4476 3.2s (ETA 3.7min)
[50/80] PV=8.0 seed=20260214 FAIL rmse=0.4111 1.7s (ETA 3.5min)
[51/80] PV=8.0 seed=20260210 FAIL rmse=0.4561 3.0s (ETA 3.4min)
[52/80] PV=8.0 seed=20260211 FAIL rmse=0.4902 1.2s (ETA 3.2min)
[53/80] PV=8.0 seed=20260212 FAIL rmse=0.4563 3.2s (ETA 3.0min)
[54/80] PV=8.0 seed=20260213 FAIL rmse=0.4418 2.8s (ETA 2.9min)
[55/80] PV=8.0 seed=20260214 FAIL rmse=0.4110 1.5s (ETA 2.7min)
[56/80] PV=8.0 seed=20260210 FAIL rmse=0.4064 2.3s (ETA 2.6min)
[57/80] PV=8.0 seed=20260211 FAIL rmse=0.4905 1.0s (ETA 2.5min)
[58/80] PV=8.0 seed=20260212 FAIL rmse=0.4615 2.5s (ETA 2.3min)
[59/80] PV=8.0 seed=20260213 FAIL rmse=0.4396 2.1s (ETA 2.2min)
[60/80] PV=8.0 seed=20260214 FAIL rmse=0.3882 1.3s (ETA 2.1min)
[61/80] PV=10.0 seed=20260210 FAIL rmse=0.5719 2.6s (ETA 1.9min)
[62/80] PV=10.0 seed=20260211 FAIL rmse=0.6014 1.2s (ETA 1.8min)
[63/80] PV=10.0 seed=20260212 FAIL rmse=0.5297 2.4s (ETA 1.7min)
[64/80] PV=10.0 seed=20260213 FAIL rmse=0.5787 2.6s (ETA 1.6min)
[65/80] PV=10.0 seed=20260214 FAIL rmse=1.2054 1.5s (ETA 1.5min)
[66/80] PV=10.0 seed=20260210 FAIL rmse=0.5719 2.4s (ETA 1.4min)
[67/80] PV=10.0 seed=20260211 FAIL rmse=0.6093 1.1s (ETA 1.2min)
[68/80] PV=10.0 seed=20260212 FAIL rmse=0.5368 2.2s (ETA 1.1min)
[69/80] PV=10.0 seed=20260213 FAIL rmse=0.5895 2.4s (ETA 1.0min)
[70/80] PV=10.0 seed=20260214 FAIL rmse=1.2052 1.3s (ETA 0.9min)
[71/80] PV=10.0 seed=20260210 FAIL rmse=0.5719 2.0s (ETA 0.8min)
[72/80] PV=10.0 seed=20260211 FAIL rmse=0.6011 1.0s (ETA 0.7min)
[73/80] PV=10.0 seed=20260212 FAIL rmse=0.5034 1.9s (ETA 0.6min)
[74/80] PV=10.0 seed=20260213 FAIL rmse=0.5868 2.0s (ETA 0.5min)
[75/80] PV=10.0 seed=20260214 FAIL rmse=0.4749 1.4s (ETA 0.4min)
[76/80] PV=10.0 seed=20260210 FAIL rmse=0.5718 1.8s (ETA 0.4min)
[77/80] PV=10.0 seed=20260211 FAIL rmse=0.5990 0.9s (ETA 0.3min)
[78/80] PV=10.0 seed=20260212 FAIL rmse=0.5556 1.5s (ETA 0.2min)
[79/80] PV=10.0 seed=20260213 FAIL rmse=0.5781 1.7s (ETA 0.1min)
[80/80] PV=10.0 seed=20260214 FAIL rmse=0.4749 1.2s (ETA 0.0min)

--- Per-PV Summary ---
ASM PV=2.0: sr=0.85, mean_rmse=0.0984
ASM PV=5.0: sr=0.00, mean_rmse=nan
ASM PV=8.0: sr=0.00, mean_rmse=nan
ASM PV=10.0: sr=0.00, mean_rmse=nan

SOLVER=asm rows=80 out=outputs/tables/missing_spot_no_oracle_quick_asm_results.csv
STAGE_DONE run_asm config=configs/exp_missing_spot_no_oracle_quick.yaml
  File "<stdin>", line 3
    b=pd.read_csv(f{base}/missing_spot_no_oracle_quick_baseline_results.csv)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
ERROR conda.cli.main_run:execute(124): `conda run python -` failed. (See above for error)
